--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "daisyui": "^2.39.1",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.4",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
