--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.7",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
