--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.39.7",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.1.0",
+    "react-leaflet-enhanced-marker": "^1.0.21",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
